added rows and seatsPerRow to stadiums
