# api.yaml
@@ -868,9 +868,15 @@ components:
           type: string
         city:
           type: string
+        rows:
+          type: integer
+        seatsPerRow:
+          type: integer
       required:
       - name
       - city
+      - rows
+      - seatsPerRow
     ListedStadium:
       type: object
       additionalProperties: false
@@ -881,10 +887,16 @@ components:
           type: string
         uuid:
           type: string
+        rows:
+          type: integer
+        seatsPerRow:
+          type: integer
       required:
       - name
       - city
       - uuid
+      - rows
+      - seatsPerRow
     MatchTicket:
       type: object
       additionalProperties: false
